tests/paczka1/fuzzy1/25138421.err
Error in line 3: P8d5fbtFpmD A425 87,4
Error in line 5: P8d5fbtFpmD A860 88,3
Error in line 8: A571 A571 53,4
Error in line 17: KkE A987 100,4
